samples/_failures_safe/1761317470_be07d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93603b05.c: In function ‘main’:
./samples/SAFE/__tmp_93603b05.c:175:16: error: expected ‘;’ at end of input
  175 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_93603b05.c:175:9: error: expected declaration or statement at end of input
  175 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_93603b05.c:175:9: error: expected declaration or statement at end of input
